- Added Magento files to gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,22 @@
 .idea
+dev/.htaccess
+dev/tests/
+lib/.htaccess
+lib/3Dsecure/
+lib/Cm/
+lib/Credis/
+lib/flex/
+lib/LinLibertineFont/
+lib/Mage/
+lib/Magento/
+lib/Net/
+lib/PEAR/
+lib/Pelago/
+lib/phpseclib/
+lib/Varien/
+lib/Zend/
+.htaccess
+app/bootstrap.php
 .htaccess.sample
 .modgit/
 .modman/
